<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"

    tools:context="com.example.android.videogamequizz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/intro"
            style="@style/TextQuestion" />
        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            style="@style/AnswerStyle"
            android:gravity="center"
            android:hint="@string/your_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_one"
            style="@style/TextQuestion"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            style="@style/AnswerStyle">
            <RadioButton
                android:id="@+id/quest_one_A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest_one_asw_one"
                style="@style/AnswerTextStyle"/>
            <RadioButton
                android:id="@+id/quest_one_B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest_one_asw_two"
                style="@style/AnswerTextStyle"/>
            <RadioButton
                android:id="@+id/quest_one_C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest_one_asw_three"
                style="@style/AnswerTextStyle"/>
            <RadioButton
                android:id="@+id/quest_one_D"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest_one_asw_four"
                style="@style/AnswerTextStyle"/>
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_two"
            style="@style/TextQuestion"/>
        <EditText
            android:id="@+id/answer_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="4"
            android:hint="@string/your_aswer"
            style="@style/AnswerStyle"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_three"
            style="@style/TextQuestion"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AnswerStyle">
            <RadioButton
                android:id="@+id/quest_three_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest_three_asw_one"
                style="@style/AnswerTextStyle"/>
            <RadioButton
                android:id="@+id/quest_three_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest_three_asw_two"
                style="@style/AnswerTextStyle"/>
            <RadioButton
                android:id="@+id/quest_three_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest_three_asw_three"
                style="@style/AnswerTextStyle"/>
            <RadioButton
                android:id="@+id/quest_three_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest_three_asw_four"
                style="@style/AnswerTextStyle"/>
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_four"
            style="@style/TextQuestion"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AnswerStyle">
            <RadioButton
                android:id="@+id/quest_four_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest_four_asw_one"
                style="@style/AnswerTextStyle"/>
            <RadioButton
                android:id="@+id/quest_four_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest_four_asw_two"
                style="@style/AnswerTextStyle"/>
            <RadioButton
                android:id="@+id/quest_four_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest_four_asw_three"
                style="@style/AnswerTextStyle"/>
            <RadioButton
                android:id="@+id/quest_four_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest_four_asw_four"
                style="@style/AnswerTextStyle"/>
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_five"
            style="@style/TextQuestion"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:orientation="vertical"
            style="@style/AnswerStyle">
            <CheckBox
                android:id="@+id/quest_five_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AnswerTextStyle"
                android:text="@string/quest_five_asw_one"
                android:onClick="limitVerify"/>
            <CheckBox
                android:id="@+id/quest_five_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AnswerTextStyle"
                android:text="@string/quest_five_asw_two"
                android:onClick="limitVerify"/>
            <CheckBox
                android:id="@+id/quest_five_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AnswerTextStyle"
                android:text="@string/quest_five_asw_three"
                android:onClick="limitVerify"/>
            <CheckBox
                android:id="@+id/quest_five_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AnswerTextStyle"
                android:text="@string/quest_five_asw_four"
                android:onClick="limitVerify"/>
            <CheckBox
                android:id="@+id/quest_five_e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AnswerTextStyle"
                android:text="@string/quest_five_asw_five"
                android:onClick="limitVerify"/>
            <CheckBox
                android:id="@+id/quest_five_f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AnswerTextStyle"
                android:text="@string/quest_five_asw_six"
                android:onClick="limitVerify"/>
            <CheckBox
                android:id="@+id/quest_five_g"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AnswerTextStyle"
                android:text="@string/quest_five_asw_seven"
                android:onClick="limitVerify"/>
            <CheckBox
                android:id="@+id/quest_five_h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AnswerTextStyle"
                android:text="@string/quest_five_asw_eight"
                android:onClick="limitVerify"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_six"
            style="@style/TextQuestion"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AnswerStyle">
            <RadioButton
                android:id="@+id/quest_six_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest_six_asw_one"
                style="@style/AnswerTextStyle"/>
            <RadioButton
                android:id="@+id/quest_six_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest_six_asw_two"
                style="@style/AnswerTextStyle"/>
            <RadioButton
                android:id="@+id/quest_six_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest_six_asw_three"
                style="@style/AnswerTextStyle"/>
            <RadioButton
                android:id="@+id/quest_six_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest_six_asw_four"
                style="@style/AnswerTextStyle"/>
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_seven"
            style="@style/TextQuestion"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AnswerStyle">
            <RadioButton
                android:id="@+id/quest_seven_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest_seven_asw_one"
                style="@style/AnswerTextStyle"/>
            <RadioButton
                android:id="@+id/quest_seven_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest_seven_asw_two"
                style="@style/AnswerTextStyle"/>
            <RadioButton
                android:id="@+id/quest_seven_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest_seven_asw_three"
                style="@style/AnswerTextStyle"/>
            <RadioButton
                android:id="@+id/quest_seven_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest_seven_asw_four"
                style="@style/AnswerTextStyle"/>
        </RadioGroup>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_answer"
            style="@style/AnswerTextStyle"
            android:onClick="calculateScores"/>
    </LinearLayout>
</ScrollView>
